syntax = "proto3";
import "shared.proto";

// Node authentication initialization
message AuthNodeInit {
  bytes pubkey = 1;
}

// Coordinator response with either success or error
message AuthCoordinatorSuccess {
  message Success {
    bool success = 1;
  }

  oneof auth_status {
    ErrorResponse error = 1;
    Success success = 2;
  }
}
